--- a/ko/yeongeo-hwalryeokjeog-eolearn.html
+++ b/ko/yeongeo-hwalryeokjeog-eolearn.html
@@ -605,6 +605,84 @@
   "learningResourceType": "가이드",
   "typicalAgeRange": "13-"
 }
-    </script>
+</script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://englishtests.online/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "영어를 효과적으로 배우는 방법",
+      "item": "https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn"
+    }
+  ]
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "영어를 효과적으로 배우는 가장 좋은 방법은 무엇인가요?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "영어를 효과적으로 배우기 위해서는 명확한 목표를 설정하고, 언어에 적극적으로 참여하며, 몰입하고, 개인화된 학습을 진행하며, 듣기, 말하기, 읽기, 쓰기를 꾸준히 연습해야 합니다."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "영어 듣기 실력을 향상시키려면 어떻게 해야 하나요?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "영어 영상 시청, 팟캐스트 청취, 대화 참여, 오디오 이해에 중점을 둔 학습 앱 활용 등을 통해 듣기 실력을 향상시킬 수 있습니다."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "영어 말하기 유창성을 기르려면 어떻게 해야 하나요?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "매일 말하기 연습을 하고, 원어민과 대화를 나누며, 언어 교환 프로그램에 참여하고, 원어민의 발음과 억양을 따라 말하는 섀도잉 기법을 활용하세요."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "영어 어휘를 확장하는 가장 좋은 방법은 무엇인가요?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "어휘를 늘리기 위해서는 다양한 독서를 하고, 플래시카드를 사용하며, 문맥 속에서 단어를 배우고, 단어 게임을 하며, 새로운 단어를 말하고 쓰면서 연습하는 것이 좋습니다."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "기술은 영어 학습에 어떻게 도움이 되나요?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "기술은 AI 기반 언어 도우미, 문법 검사 도구, 인터랙티브 앱, 온라인 강의, 디지털 플래시카드 등을 통해 영어 학습을 지원할 수 있습니다."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "몰입식 학습은 영어 배우기에 효과적인가요?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "네, 몰입은 가장 효과적인 방법 중 하나입니다. 영어 미디어에 자신을 노출시키고, 원어민과 대화하며, 영어로 생각하는 습관을 들이면 학습 속도를 높일 수 있습니다."
+      }
+    }
+  ]
+}
+</script>
+	
 </body>
 </html>
