--- a/tl/mabisang-pag-aaral-ng-ingles.html
+++ b/tl/mabisang-pag-aaral-ng-ingles.html
@@ -605,6 +605,84 @@
   "learningResourceType": "Gabay",
   "typicalAgeRange": "13-"
 }
-    </script>
+</script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://englishtests.online/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Paano Matutong Mag-English nang Epektibo",
+      "item": "https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles"
+    }
+  ]
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "Ano ang pinakamahusay na paraan para matutong mag-English nang epektibo?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Ang pinakamahusay na paraan ay ang magtakda ng malinaw na layunin, aktibong makisangkot sa wika, mag-immerse sa kapaligirang Ingles, i-personalize ang pag-aaral, at regular na magsanay sa pakikinig, pagsasalita, pagbasa, at pagsusulat."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Paano ko mapapabuti ang aking kakayahan sa pakikinig ng Ingles?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Mapapabuti mo ang iyong kakayahan sa pakikinig sa pamamagitan ng panonood ng mga video sa Ingles, pakikinig sa mga podcast, pakikisalamuha sa mga usapan, at paggamit ng mga app na nakatutok sa audio comprehension."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Paano ako magiging matatas magsalita ng Ingles?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Upang maging matatas, magsanay magsalita araw-araw, makipag-usap sa mga native speaker, gumamit ng mga language exchange program, at gayahin ang bigkas at intonasyon ng mga native speaker."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Ano ang mga pinakamahusay na paraan para mapalawak ang bokabularyo sa Ingles?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Ang mga pinakamahusay na paraan ay ang malawak na pagbabasa, paggamit ng flashcards, pag-aaral ng mga salita sa konteksto, paglalaro ng mga word game, at pagsasanay sa pagsusulat at pagsasalita gamit ang mga bagong salita."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Paano makakatulong ang teknolohiya sa pagkatuto ng Ingles?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Makakatulong ang teknolohiya sa pamamagitan ng AI-powered na language assistant, grammar-checking tools, interactive na apps, online na kurso, at digital na flashcards."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Epektibo ba ang immersion sa pag-aaral ng Ingles?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Oo, ang immersion ay isa sa mga pinaka-epektibong pamamaraan. Ang paglalagay ng sarili sa kapaligirang Ingles, pakikipag-usap sa mga native speaker, at pag-iisip gamit ang Ingles ay maaaring pabilisin ang proseso ng pagkatuto."
+      }
+    }
+  ]
+}
+</script>
+	
 </body>
 </html>
