--- a/vi/hoc-tieng-anh-hieu-qua.html
+++ b/vi/hoc-tieng-anh-hieu-qua.html
@@ -605,5 +605,83 @@
   "typicalAgeRange": "13-"
 }
 </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://englishtests.online/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Cách học tiếng Anh hiệu quả",
+      "item": "https://englishtests.online/vi/hoc-tieng-anh-hieu-qua"
+    }
+  ]
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "Cách tốt nhất để học tiếng Anh hiệu quả là gì?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Cách tốt nhất để học tiếng Anh hiệu quả là đặt mục tiêu rõ ràng, tích cực sử dụng ngôn ngữ, hòa mình vào môi trường tiếng Anh, cá nhân hóa việc học và luyện tập nghe, nói, đọc, viết thường xuyên."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Làm thế nào để cải thiện kỹ năng nghe tiếng Anh?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Bạn có thể cải thiện kỹ năng nghe bằng cách xem video tiếng Anh, nghe podcast, tham gia trò chuyện và sử dụng các ứng dụng học ngôn ngữ tập trung vào việc hiểu âm thanh."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Làm sao để nói tiếng Anh trôi chảy?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Để nói trôi chảy, hãy luyện tập nói hàng ngày, trò chuyện với người bản ngữ, tham gia chương trình trao đổi ngôn ngữ và bắt chước cách phát âm, ngữ điệu của người bản xứ."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Những cách tốt nhất để mở rộng vốn từ vựng tiếng Anh là gì?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Những cách tốt nhất để học từ vựng bao gồm đọc nhiều, sử dụng flashcard, học từ trong ngữ cảnh, chơi trò chơi từ vựng và luyện tập sử dụng từ mới trong nói và viết."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Công nghệ có thể giúp học tiếng Anh như thế nào?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Công nghệ có thể hỗ trợ học tiếng Anh thông qua trợ lý ngôn ngữ sử dụng AI, công cụ kiểm tra ngữ pháp, ứng dụng tương tác, khóa học trực tuyến và flashcard điện tử."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Việc hòa mình vào môi trường tiếng Anh có hiệu quả không?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Có, đây là một trong những phương pháp hiệu quả nhất. Bao quanh bởi truyền thông tiếng Anh, trò chuyện với người bản ngữ và suy nghĩ bằng tiếng Anh có thể tăng tốc quá trình học."
+      }
+    }
+  ]
+}
+</script>
+	
 </body>
 </html>
