--- a/about-us.html
+++ b/about-us.html
@@ -245,6 +245,11 @@
                 <li><strong>Keep Your Progress:</strong> Your results are saved and displayed at the tests pages.</li>
             </ul>
         </section>
+
+	<section class="section" id="sister-site">
+	    <h2>Our Coding Tests Platform</h2>
+	    <p>If you're looking to sharpen your programming skills, check out our dedicated platform <a href="https://codingtests.online">codingtests.online</a>. It features a wide range of free coding challenges and tests in <a href="https://codingtests.online/python" target="_blank" rel="noopener noreferrer">Python</a>, <a href="https://codingtests.online/java-spring" target="_blank" rel="noopener noreferrer">Java/Spring</a>, <a href="https://codingtests.online/csharp-dotnet" target="_blank" rel="noopener noreferrer">C#/.NET</a>, and <a href="https://codingtests.online/js-nodejs" target="_blank" rel="noopener noreferrer">JavaScript/Node.js</a>, and more—perfect for beginners and junior developers preparing for interviews. Practicing regularly can boost your problem-solving skills and help you stand out in the tech job market.</p>
+	</section>
         
         <section class="section" id="contact">
             <h2>Contact Us</h2>
