--- a/toefl-preparation.html
+++ b/toefl-preparation.html
@@ -341,22 +341,23 @@
 {
   "@context": "https://schema.org",
   "@type": "Article",
-  "headline": "How to Learn English Effectively: My Journey and Advice",
-  "description": "A comprehensive guide to learning English effectively based on real experience. Covers goal setting, active engagement, immersion, personalized learning strategies, listening, speaking, reading, writing, grammar, vocabulary building, technology tools including AI assistants, and the importance of consistency.",
+  "headline": "My TOEFL Journey: A Comprehensive Preparation Guide",
+  "description": "A personal account and comprehensive guide to TOEFL preparation covering all four sections of the test: Reading, Listening, Speaking, and Writing. Includes strategies, resources, preparation tips, and encouragement for test-takers.",
   "keywords": [
-    "learn english effectively",
-    "english learning strategies",
-    "english immersion",
-    "personalized english learning",
-    "english listening practice",
-    "english speaking fluency",
-    "english reading comprehension",
-    "english writing practice",
-    "english grammar tips",
-    "english vocabulary building",
-    "language learning technology",
-    "AI for language learning",
-    "english learning consistency"
+    "TOEFL preparation",
+    "TOEFL iBT guide",
+    "TOEFL study strategies",
+    "TOEFL reading section",
+    "TOEFL listening section",
+    "TOEFL speaking section",
+    "TOEFL writing section",
+    "TOEFL vs IELTS",
+    "TOEFL mock tests",
+    "TOEFL study resources",
+    "AI for TOEFL preparation",
+    "international student exams",
+    "English proficiency test",
+    "academic English preparation"
   ],
   "author": {
     "@type": "Organization",
@@ -380,19 +381,19 @@
     "width": 192,
     "height": 192
   },
-  "datePublished": "2025-03-15",
-  "dateModified": "2025-04-01",
+  "datePublished": "2025-04-08",
+  "dateModified": "2025-04-08",
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "https://englishtests.online/learn-english-effectively"
+    "@id": "https://englishtests.online/toefl-preparation"
   },
-  "url": "https://englishtests.online/learn-english-effectively",
+  "url": "https://englishtests.online/toefl-preparation",
   "inLanguage": "en",
-  "articleSection": "English Learning",
-  "articleBody": "Learn how to effectively learn English with practical advice covering goal setting, active engagement, immersion, personalized learning, listening, speaking, reading, writing, grammar, vocabulary, technology tools, and consistency strategies.",
+  "articleSection": "TOEFL Preparation",
+  "articleBody": "A personal journey through TOEFL preparation with practical strategies for the Reading, Listening, Speaking, and Writing sections, plus tips on using AI tools, taking mock tests, and managing test day anxiety.",
   "about": {
     "@type": "Thing",
-    "name": "English Language Learning"
+    "name": "TOEFL Exam Preparation"
   },
   "offers": {
     "@type": "Offer",
@@ -400,7 +401,7 @@
     "priceCurrency": "USD",
     "availability": "https://schema.org/InStock"
   },
-  "alternativeHeadline": "12 Proven Strategies to Master the English Language",
+  "alternativeHeadline": "From Panic to Confidence: Mastering the TOEFL iBT Test",
   "copyrightYear": "2025",
   "accessibilityAPI": "ARIA",
   "accessibilityControl": ["fullKeyboardControl", "fullMouseControl"],
@@ -413,13 +414,13 @@
   },
   "audience": {
     "@type": "Audience",
-    "audienceType": "English Learners"
+    "audienceType": "TOEFL Test Takers"
   },
   "potentialAction": {
     "@type": "ReadAction",
     "target": {
       "@type": "EntryPoint",
-      "urlTemplate": "https://englishtests.online/learn-english-effectively"
+      "urlTemplate": "https://englishtests.online/toefl-preparation"
     }
   },
   "isPartOf": {
@@ -431,105 +432,129 @@
     {
       "@type": "WebPageElement",
       "isPartOf": {
-        "@id": "https://englishtests.online/learn-english-effectively"
+        "@id": "https://englishtests.online/toefl-preparation"
       },
-      "name": "Setting Clear Goals",
+      "name": "The Day I Decided: My TOEFL Journey Begins",
       "position": 1
     },
     {
       "@type": "WebPageElement",
       "isPartOf": {
-        "@id": "https://englishtests.online/learn-english-effectively"
+        "@id": "https://englishtests.online/toefl-preparation"
       },
-      "name": "Active Engagement is Key",
+      "name": "What Exactly is TOEFL and Who Needs It?",
       "position": 2
     },
     {
       "@type": "WebPageElement",
       "isPartOf": {
-        "@id": "https://englishtests.online/learn-english-effectively"
+        "@id": "https://englishtests.online/toefl-preparation"
       },
-      "name": "Immerse Yourself",
+      "name": "TOEFL vs. IELTS: Understanding the Key Differences",
       "position": 3
     },
     {
       "@type": "WebPageElement",
       "isPartOf": {
-        "@id": "https://englishtests.online/learn-english-effectively"
+        "@id": "https://englishtests.online/toefl-preparation"
       },
-      "name": "Personalized Learning",
+      "name": "Decoding the TOEFL: Understanding the Four Pillars",
       "position": 4
     },
     {
       "@type": "WebPageElement",
       "isPartOf": {
-        "@id": "https://englishtests.online/learn-english-effectively"
+        "@id": "https://englishtests.online/toefl-preparation"
       },
-      "name": "Train Your Ear",
+      "name": "Charting My Course: Setting Goals and Crafting a Study Plan",
       "position": 5
     },
     {
       "@type": "WebPageElement",
       "isPartOf": {
-        "@id": "https://englishtests.online/learn-english-effectively"
+        "@id": "https://englishtests.online/toefl-preparation"
       },
-      "name": "Speak Up!",
+      "name": "Diving into Texts: My Reading Section Strategy",
       "position": 6
     },
     {
       "@type": "WebPageElement",
       "isPartOf": {
-        "@id": "https://englishtests.online/learn-english-effectively"
+        "@id": "https://englishtests.online/toefl-preparation"
       },
-      "name": "Reading Widely",
+      "name": "Tuning In: My Approach to the Listening Section",
       "position": 7
     },
     {
       "@type": "WebPageElement",
       "isPartOf": {
-        "@id": "https://englishtests.online/learn-english-effectively"
+        "@id": "https://englishtests.online/toefl-preparation"
       },
-      "name": "Writing Practice",
+      "name": "Finding My Voice: Conquering the Speaking Section",
       "position": 8
     },
     {
       "@type": "WebPageElement",
       "isPartOf": {
-        "@id": "https://englishtests.online/learn-english-effectively"
+        "@id": "https://englishtests.online/toefl-preparation"
       },
-      "name": "Grammar Matters",
+      "name": "Putting Thoughts into Words: Mastering the Writing Section",
       "position": 9
     },
     {
       "@type": "WebPageElement",
       "isPartOf": {
-        "@id": "https://englishtests.online/learn-english-effectively"
+        "@id": "https://englishtests.online/toefl-preparation"
       },
-      "name": "Vocabulary is Power",
+      "name": "The Rise of AI in TOEFL Preparation",
       "position": 10
     },
     {
       "@type": "WebPageElement",
       "isPartOf": {
-        "@id": "https://englishtests.online/learn-english-effectively"
+        "@id": "https://englishtests.online/toefl-preparation"
       },
-      "name": "Tech is Your Friend",
+      "name": "My Arsenal of Resources: The Tools I Used",
       "position": 11
     },
     {
       "@type": "WebPageElement",
       "isPartOf": {
-        "@id": "https://englishtests.online/learn-english-effectively"
+        "@id": "https://englishtests.online/toefl-preparation"
       },
-      "name": "Consistency and Persistence",
+      "name": "The Crucial Step: Taking Mock Tests",
       "position": 12
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/toefl-preparation"
+      },
+      "name": "Navigating the Big Day: Test-Taking Strategies",
+      "position": 13
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/toefl-preparation"
+      },
+      "name": "Reflections and Results: My TOEFL Story",
+      "position": 14
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/toefl-preparation"
+      },
+      "name": "Final Words of Encouragement: You Can Do It!",
+      "position": 15
     }
   ],
   "educationalLevel": "All Levels",
   "educationalUse": "Self-Study",
   "interactivityType": "Expositive",
   "learningResourceType": "Guide",
-  "typicalAgeRange": "13-"
+  "typicalAgeRange": "16-"
 }
 </script>
 
@@ -547,8 +572,14 @@
     {
       "@type": "ListItem",
       "position": 2,
-      "name": "How to Learn English Effectively",
-      "item": "https://englishtests.online/learn-english-effectively"
+      "name": "TOEFL Preparation",
+      "item": "https://englishtests.online/toefl-preparation"
+    },
+    {
+      "@type": "ListItem",
+      "position": 3,
+      "name": "My TOEFL Journey",
+      "item": "https://englishtests.online/toefl-preparation"
     }
   ]
 }
@@ -561,50 +592,50 @@
   "mainEntity": [
     {
       "@type": "Question",
-      "name": "What is the best way to learn English effectively?",
+      "name": "What is the TOEFL exam and who needs to take it?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "The best way to learn English effectively is to set clear goals, actively engage with the language, immerse yourself, personalize your learning, and practice listening, speaking, reading, and writing regularly."
+        "text": "TOEFL stands for Test of English as a Foreign Language. It's a standardized test designed to measure the English language proficiency of non-native speakers wishing to enroll in English-speaking universities. Many universities in the United States, Canada, the UK, and Australia require international students to submit TOEFL scores as part of their admission process. Some professional licensing bodies and government agencies also use TOEFL scores."
       }
     },
     {
       "@type": "Question",
-      "name": "How can I improve my English listening skills?",
+      "name": "What are the main differences between TOEFL and IELTS?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "You can improve your listening skills by watching English videos, listening to podcasts, engaging in conversations, and using language learning apps that focus on audio comprehension."
+        "text": "The main differences include: 1) The Speaking section format - TOEFL uses a computer-recorded format, while IELTS has a face-to-face interview; 2) Question types - TOEFL primarily uses multiple-choice questions, while IELTS includes a wider variety of question formats; 3) Writing tasks - both require two essays but with different emphases; 4) IELTS offers both Academic and General Training modules depending on your goals."
       }
     },
     {
       "@type": "Question",
-      "name": "How can I become fluent in speaking English?",
+      "name": "What are the four sections of the TOEFL iBT test?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "To become fluent, practice speaking daily, engage in conversations with native speakers, use language exchange programs, and shadow native speakers by mimicking their pronunciation and intonation."
+        "text": "The TOEFL iBT consists of four sections: Reading (understanding academic texts), Listening (comprehending lectures and conversations), Speaking (expressing opinions and summarizing information), and Writing (writing academic essays and summaries of reading/listening materials)."
       }
     },
     {
       "@type": "Question",
-      "name": "What are the best ways to expand my English vocabulary?",
+      "name": "How can I improve my TOEFL Speaking score?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "The best ways to build your vocabulary include reading widely, using flashcards, learning words in context, playing word games, and practicing new words in writing and speaking."
+        "text": "To improve your Speaking score, practice speaking English regularly, record yourself and listen for areas of improvement, work on your fluency and pronunciation, learn to organize your thoughts quickly, take effective notes for integrated tasks, and seek feedback from others."
       }
     },
     {
       "@type": "Question",
-      "name": "How can technology help in learning English?",
+      "name": "What resources are recommended for TOEFL preparation?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "Technology can assist in learning English through AI-powered language assistants, grammar-checking tools, interactive apps, online courses, and digital flashcards."
+        "text": "Recommended resources include official ETS TOEFL materials, preparation books from publishers like Barron's and Kaplan, online platforms such as englishtests.online, vocabulary apps like Memrise and Anki, YouTube channels like TST Prep TOEFL, podcasts for listening practice, and mock tests from the ETS website, BestMyTest, and Magoosh."
       }
     },
     {
       "@type": "Question",
-      "name": "Is immersion an effective way to learn English?",
+      "name": "How can AI help with TOEFL preparation?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "Yes, immersion is one of the most effective methods. Surrounding yourself with English media, speaking with native speakers, and thinking in English can accelerate your learning process."
+        "text": "AI can help with TOEFL preparation by providing tools that adapt to your learning style, offering conversational practice for speaking skills, giving immediate feedback on your performance, simulating test-like conditions, and tailoring practice exercises to your specific needs through platforms like ChatGPT and Claude."
       }
     }
   ]
