--- a/a1-english-tests.html
+++ b/a1-english-tests.html
@@ -232,7 +232,7 @@
         }
 
         /* Add a blue line after FindWord */
-        .dropdown-menu a:nth-child(6)::after {
+        .dropdown-menu a:nth-child(7)::after {
             content: '';
             position: absolute;
             left: 0;
@@ -434,6 +434,7 @@
 
         <div class="dropdown-menu" id="sandwichDropdown">
             <a href="https://englishtests.online/learn-english-effectively">Learning English <img src="language.png" style="float: right; margin-left: 5px; position: relative; top: -2px; max-width: 24px; max-height: 24px; width: auto; height: auto;"></a>
+            <a href="https://englishtests.online/toefl-preparation">TOEFL Preparation</a>
             <a href="https://englishtests.online/about-us">About Us</a>
             <a href="https://englishtests.online/terms-of-use">Terms of Use</a>
             <a href="https://englishtests.online/privacy-policy">Privacy Policy</a>
