--- a/test-your-english-level.html
+++ b/test-your-english-level.html
@@ -256,12 +256,12 @@
     },
     {
       "id": 4,
-      "question": "Choose the correct plural form: one book, two _____.",
+      "question": "Choose the correct plural form: one fox, two _____.",
       "options": {
-        "A": "book",
-        "B": "bookies",
-        "C": "books",
-        "D": "bookes"
+        "A": "fox",
+        "B": "foxies",
+        "C": "foxes",
+        "D": "foxs"
       },
       "correct_answer": "C",
       "category": "Grammar",
@@ -271,10 +271,10 @@
       "id": 5,
       "question": "Select the best phrase to respond to 'Thank you.'",
     "options": {
-      "A": "Yes, please.",
+      "A": "Welcome you.",
       "B": "You're welcome.",
-      "C": "No problem.",
-      "D": "Excuse me."
+      "C": "Not at all.",
+      "D": "I glad."
     },
     "correct_answer": "B",
     "category": "Use of English",
@@ -297,7 +297,7 @@
       "id": 7,
       "question": "Choose the correct option to complete the sentence: I _____ breakfast at 7:00 every morning.",
       "options": {
-        "A": "eating",
+        "A": "am eating",
         "B": "eat",
         "C": "eats",
         "D": "to eat"
@@ -308,12 +308,12 @@
     },
     {
       "id": 8,
-      "question": "Select the most appropriate response to: 'How are you?'",
+      "question": "Select the most appropriate response to: 'How are you doing?'",
       "options": {
-        "A": "I am John.",
-        "B": "I am fine, thank you.",
-        "C": "I am at home.",
-        "D": "I am a student."
+        "A": "Yes, I am doing.",
+        "B": "I am fine.",
+        "C": "I am doing.",
+        "D": "I do very much."
       },
       "correct_answer": "B",
       "category": "Use of English",
@@ -373,12 +373,12 @@
     },
     {
       "id": 13,
-      "question": "Choose the correct past simple form: Yesterday I _____ to the cinema.",
+      "question": "Choose the correct past simple form: Yesterday I _____ earlier than usual.",
       "options": {
-        "A": "go",
-        "B": "went",
-        "C": "going",
-        "D": "goed"
+        "A": "leave",
+        "B": "left",
+        "C": "leaved",
+        "D": "lefted"
       },
       "correct_answer": "B",
       "category": "Grammar",
@@ -386,12 +386,12 @@
     },
     {
       "id": 14,
-      "question": "Select the correct preposition: The cup is _____ the table.",
+      "question": "Select the correct preposition: He _____ _____ the lines.",
       "options": {
-        "A": "in",
-        "B": "at",
-        "C": "on",
-        "D": "with"
+        "A": "read/within",
+        "B": "red/without",
+        "C": "read/between",
+        "D": "red/between"
       },
       "correct_answer": "C",
       "category": "Grammar",
@@ -399,12 +399,12 @@
     },
     {
       "id": 15,
-      "question": "Which sentence uses the comparative form correctly?",
+      "question": "Which sentence uses the superlative form correctly?",
       "options": {
-        "A": "This building is more tall than that one.",
-        "B": "This building is tallest than that one.",
-        "C": "This building is more taller than that one.",
-        "D": "This building is taller than that one."
+        "A": "He is smartest person I know.",
+        "B": "He is smarter person I know.",
+        "C": "He is the smarter person I know.",
+        "D": "He is the smartest person I know."
       },
       "correct_answer": "D",
       "category": "Grammar",
@@ -412,12 +412,12 @@
     },
     {
       "id": 16,
-      "question": "Choose the correct form of the verb: She _____ television when I called her.",
+      "question": "Choose the correct form of the verb: She _____ pasta when I called her.",
       "options": {
-        "A": "watched",
-        "B": "watches",
-        "C": "was watching",
-        "D": "is watching"
+        "A": "prepared",
+        "B": "prepares",
+        "C": "was preparing",
+        "D": "is preparing"
       },
       "correct_answer": "C",
       "category": "Grammar",
@@ -429,7 +429,7 @@
       "options": {
         "A": "Yes, I like.",
         "B": "Yes, please.",
-        "C": "Yes, I have.",
+        "C": "Yes, some.",
         "D": "Yes, I am."
       },
       "correct_answer": "B",
@@ -442,7 +442,7 @@
       "options": {
         "A": "What is your name?",
         "B": "Where do you live?",
-        "C": "What do you think about this movie?",
+        "C": "What do you think?",
         "D": "How old are you?"
       },
       "correct_answer": "C",
@@ -454,7 +454,7 @@
       "question": "Choose the most appropriate question to ask when ordering food in a restaurant:",
       "options": {
         "A": "Can I try this?",
-        "B": "May I have the menu, please?",
+        "B": "May I have the menu?",
         "C": "Do you have food?",
         "D": "Is there eating here?"
       },
@@ -480,7 +480,7 @@
       "question": "Which word completes the sentence correctly? Can you _____ why you were late?",
       "options": {
         "A": "tell",
-        "B": "say",
+        "B": "express",
         "C": "explain",
         "D": "talk"
       },
@@ -492,10 +492,10 @@
       "id": 22,
       "question": "Choose the word that best completes the sentence: My _____ gave me money for my birthday.",
       "options": {
-        "A": "parent",
-        "B": "neighbor",
-        "C": "teacher",
-        "D": "doctor"
+        "A": "parents",
+        "B": "drivers",
+        "C": "teachers",
+        "D": "doctors"
       },
       "correct_answer": "A",
       "category": "Vocabulary",
@@ -518,10 +518,10 @@
       "id": 24,
       "question": "Select the word that best fits in this sentence: The Amazon is the longest _____ in South America.",
       "options": {
-        "A": "mountain",
+        "A": "snake",
         "B": "road",
         "C": "river",
-        "D": "country"
+        "D": "pond"
       },
       "correct_answer": "C",
       "category": "Vocabulary",
@@ -584,7 +584,7 @@
       "question": "Select the most natural response to: 'I've just passed my driving test!'",
       "options": {
         "A": "That's a shame.",
-        "B": "Better luck next time.",
+        "B": "Good luck!",
         "C": "Congratulations!",
         "D": "I'm sorry to hear that."
       },
@@ -687,10 +687,10 @@
       "id": 37,
       "question": "Change this direct question into reported speech: 'Can you help me with this task?'",
       "options": {
-        "A": "He asked if I can help him with that task.",
-        "B": "He asked if I could help him with that task.",
-        "C": "He asked could I help him with that task.",
-        "D": "He asked I could help him with that task."
+        "A": "He asked whether I can help him with that task.",
+        "B": "He asked whether I could help him with that task.",
+        "C": "He asked whether could I help him with that task.",
+        "D": "He asked whether I could help him with this task."
       },
       "correct_answer": "B",
       "category": "Grammar",
