--- a/test-your-english-level.html
+++ b/test-your-english-level.html
@@ -793,7 +793,7 @@
       "options": {
         "A": "effects",
         "B": "results",
-        "C": "consequence",
+        "C": "consequences",
         "D": "impacts"
       },
       "correct_answer": "C",
@@ -802,7 +802,7 @@
     },
     {
       "id": 46,
-      "question": "Which word best fits in this sentence? We need to create a _____ for completing the project by the deadline.",
+      "question": "Which word best fits in this sentence? We need to set a _____ for completing the project by the deadline.",
       "options": {
         "A": "plan",
         "B": "timetable",
@@ -831,9 +831,9 @@
       "question": "Choose the most appropriate word to complete this sentence: The new software will _____ productivity by automating repetitive tasks.",
       "options": {
          "A": "hinder",
-   	 "B": "limit",
-   	 "C": "enhance",
-   	 "D": "delay"
+	   	 "B": "limit",
+	   	 "C": "enhance",
+	   	 "D": "delay"
       },
       "correct_answer": "C",
       "category": "Vocabulary",
@@ -918,18 +918,18 @@
       "level": "C1"
     },
     {
-      "id": 55,
-      "question": "Which expression is most appropriate to concede a point in an academic argument?",
-      "options": {
-        "A": "You're right and I'm wrong.",
-        "B": "While there is some merit to that viewpoint, nevertheless...",
-        "C": "I guess that makes sense, but...",
-        "D": "Fine, you win that point."
-      },
-      "correct_answer": "B",
-      "category": "Use of English",
-      "level": "C1"
-    },
+	  "id": 55,
+	  "question": "Which expression is most appropriate to concede a point in an academic argument?",
+	  "options": {
+	    "A": "You're absolutely correct on this matter, and I was mistaken.",
+	    "B": "While there is some merit to that viewpoint, nevertheless...",
+	    "C": "I suppose that perspective has validity, however I would argue...",
+	    "D": "Very well, I concede that particular point to you."
+	  },
+	  "correct_answer": "B",
+	  "category": "Use of English",
+	  "level": "C1"
+	},
     {
       "id": 56,
       "question": "Select the most appropriate academic collocation to complete this sentence: 'The research aims to _____ a gap in the existing knowledge.'",
@@ -946,15 +946,15 @@
     {
       "id": 57,
       "question": "Select the word that means 'not based on facts or good reasoning'?",
-    "options": {
-      "A": "robust",
-      "B": "tenuous",
-      "C": "valid",
-      "D": "cogent"
-    },
-    "correct_answer": "B",
-    "category": "Vocabulary",
-    "level": "C1"
+	    "options": {
+	      "A": "robust",
+	      "B": "tenuous",
+	      "C": "valid",
+	      "D": "cogent"
+	    },
+	    "correct_answer": "B",
+	    "category": "Vocabulary",
+	    "level": "C1"
     },
     {
       "id": 58,
@@ -1025,7 +1025,7 @@
       "id": 63,
       "question": "The author suggests that contemporary AI applications have:",
       "options": {
-        "A": "Been limited to creative sectors only",
+        "A": "Been limited to creative sectors only due to the complexity of its nature",
         "B": "Created economic disruption without new opportunities",
         "C": "Transformed various sectors while raising important societal questions",
         "D": "Completely eliminated the need for human cognitive tasks"
@@ -1035,25 +1035,25 @@
       "level": "C2"
     },
     {
-      "id": 64,
-      "question": "In paragraph 3, the word 'verisimilitude' most closely means:",
-      "options": {
-        "A": "Mathematical precision",
-        "B": "Appearance of being true or real",
-        "C": "Eloquence and verbosity",
-        "D": "Technical complexity"
-      },
-      "correct_answer": "B",
-      "category": "Reading Comprehension",
-      "level": "C2"
-    },
+	  "id": 64,
+	  "question": "In paragraph 3, the word 'verisimilitude' most closely means:",
+	  "options": {
+	    "A": "Similarity or resemblance in form",
+	    "B": "Appearance of being true or real",
+	    "C": "Authenticity of original sources",
+	    "D": "Plausibility of logical reasoning"
+	  },
+	  "correct_answer": "B",
+	  "category": "Reading Comprehension",
+	  "level": "C2"
+	},
     {
       "id": 65,
       "question": "Which ethical challenge does the author identify as being particularly problematic with deep neural networks?",
       "options": {
         "A": "Labor displacement",
         "B": "Erosion of privacy",
-        "C": "Their 'black box' nature affecting transparency",
+        "C": "'Black box' nature",
         "D": "Algorithmic bias"
       },
       "correct_answer": "C",
@@ -1103,12 +1103,12 @@
       "id": 69,
       "question": "Which of the following would be the most appropriate alternative title for this passage?",
       "options": {
-        "A": "Artificial Intelligence: Past Achievements, Present Challenges, and Future Directions",	      
+        "A": "How to Build a Career as a Software Engineer in Artificial Intelligence",	      
         "B": "The Dangers of Artificial Intelligence in Modern Society",
-        "C": "How to Build a Career in Artificial Intelligence",
-        "D": "Why Artificial General Intelligence Will Never Be Achieved"
+        "C": "Artificial Intelligence: Past Achievements, Present Challenges, and Future Directions",
+        "D": "Why Artificial General Intelligence Will Not Be Achieved In the Nearest Future"
       },
-      "correct_answer": "A",
+      "correct_answer": "C",
       "category": "Reading Comprehension",
       "level": "C2"
     },
@@ -1116,10 +1116,10 @@
       "id": 70,
       "question": "What can be inferred from the passage about the relationship between AI development and ethical considerations?",
       "options": {
-        "A": "Ethical considerations are secondary to technological advancement",
-        "B": "They should be developed in parallel with close coordination",
+        "A": "Ethical considerations are secondary to technological advancement of artificial intelligence",
+        "B": "Ethical considerations and AI should be developed in parallel with close coordination",
         "C": "Ethics should be addressed only after technologies are fully developed",
-        "D": "Ethical frameworks have already been adequately established"
+        "D": "Ethical frameworks have already been adequately established recently"
       },
       "correct_answer": "B",
       "category": "Reading Comprehension",
